# ESP_TESTS

./: README.md
blink/: sdkconfig  sdkconfig.old
blink custom/: CMakeLists.txt
blink custom/main/: idf_component.yml  main.c
i2c_scan/: CMakeLists.txt
i2c_scan/main/: CMakeLists.txt  main.c
light_sleep/: sdkconfig  sdkconfig.old
light_sleep/main/: gpio_wakeup.c
ltc3555_test/: CMakeLists.txt  ltc3555.txt
ltc3555_test/main/: main.c
motor_tests/: CMakeLists.txt  sdkconfig
motor_tests/drivers/BLE/: BLE.c  CMakeLists.txt
motor_tests/drivers/BLE/include/: BLE.h
motor_tests/drivers/DRV2605driver/: CMakeLists.txt  DRV2605driver.c
motor_tests/drivers/DRV2605driver/include/: DRV2605driver.h
motor_tests/drivers/pin_config/: CMakeLists.txt  pin_config.c
motor_tests/drivers/pin_config/include/: pin_config.h
motor_tests/drivers/signal/: CMakeLists.txt  signal.c
motor_tests/drivers/signal/include/: signal.h
motor_tests/main/: CMakeLists.txt  main.c
soft_i2c/: sdkconfig  sdkconfig.old
soft_i2c/main/: soft_i2c_master_main.c
